# calculator-library

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  package.json
.github/workflows/: ci.yml  pages.yml
crates/calculator-cli/: Cargo.toml
crates/calculator-cli/src/: main.rs
crates/calculator-core/: Cargo.toml
crates/calculator-core/benches/: representative_paths.rs
crates/calculator-core/examples/: allocation_baseline.rs  logical_work_baseline.rs
crates/calculator-core/fixtures/: parser_session_conformance.json
crates/calculator-core/src/: api.rs  conformance_tests.rs  expression.rs  fuzz_tests.rs  interval.rs  lib.rs  polynomial.rs  session.rs  syntax.rs  types.rs
crates/calculator-wasi/: Cargo.toml
crates/calculator-wasi/src/: main.rs
crates/calculator-wasm/: Cargo.toml
crates/calculator-wasm/fixtures/: native_wasm_dto_conformance.json
crates/calculator-wasm/src/: convert.rs  dto.rs  lib.rs
crates/xtask/: Cargo.toml
crates/xtask/snapshots/: protocol-2.0.dto.ts  protocol-4.0.dto.ts  protocol-4.1.dto.ts
crates/xtask/src/: main.rs
crates/xtask/templates/: dto.ts
doc/: design.md  implementation-status.md  performance-baselines.md  public-contract.md
doc/tutorial/: README.md
examples/vanilla-web/: index.html  package.json  pnpm-lock.yaml  tsconfig.json
examples/vanilla-web/scripts/: copy-wasm.mjs
examples/vanilla-web/src/: main.ts  styles.css
examples/vanilla-web/tests/: sample-ui.mjs
issues/: 0008-example-ui-editing-and-display-contract.md  0009-large-negative-exponential-performance.md  0010-signed-interval-multiplication-performance.md  0011-dyadic-rational-conversion-performance.md  0012-exp-small-index-operands.md  0013-exp-recurrence-buffer-reuse.md  0014-series-bound-scalar-operands.md  0015-log-common-denominator-recurrence.md  0016-exp-reciprocal-canonicalization.md  0017-canonical-reciprocal-interval.md  0018-atan-common-denominator-recurrence.md  0019-trigonometric-common-denominator-recurrence.md  0020-euler-common-denominator-recurrence.md  0021-asin-common-denominator-recurrence.md  0022-unit-trigonometric-projection.md  0023-unit-trigonometric-pair.md  0024-trigonometric-range-composition.md  0025-unit-trigonometric-reduction.md  0026-trigonometric-scalar-reduction.md  0027-rational-halving.md  0028-pi-primitive-scaling.md  0029-inverse-trig-exact-point-sharing.md  0030-acos-pi-sharing.md  0031-inverse-trig-unit-checks.md  0032-inverse-sine-half-threshold.md  0033-atan-unit-threshold.md  0034-inverse-trig-domain-units.md  0035-exp-scalar-reduction.md  0036-log-mobius-transform.md  0037-log-scalar-reduction.md  0038-directed-log-endpoints.md  0039-directed-atan-endpoints.md  0040-directed-asin-unit-endpoints.md  0041-directed-asin-transform-endpoints.md  0042-directed-acos-endpoints.md  0043-cosine-positive-borrow.md  0044-asin-complement-square.md  0045-canonical-complement-square.md  0046-signed-rational-scaling.md  0047-transformed-asin-shared-pi.md  (+80 more)
tools/: install-binaryen.sh
tools/oracle/: check-rational-oracle.mjs
