[workspace]
members = [
    "crates/calculator-core",
    "crates/calculator-wasm",
    "crates/calculator-cli",
    "crates/calculator-wasi",
    "crates/xtask",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["bem130"]
license = "MIT"
repository = "https://github.com/bem130/calculator-library"

[workspace.dependencies]
calculator-core = { path = "crates/calculator-core", version = "0.1.0" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
wildcard_enum_match_arm = "deny"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
opt-level = 3
lto = false
codegen-units = 1
debug = true
