[package]
name = "calculator-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
std = []

[dependencies]
num-bigint = { version = "0.4.6", default-features = false }
num-integer = { version = "0.1.46", default-features = false }
num-traits = { version = "0.2.19", default-features = false }

[dev-dependencies]
criterion = { version = "0.7.0", default-features = false, features = ["cargo_bench_support"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"

[[bench]]
name = "representative_paths"
harness = false

[lints]
workspace = true
