[package]
name = "calculator-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
calculator-core = { path = "../calculator-core" }
num-bigint = { version = "0.4.6", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.102"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.105"

[dev-dependencies]
serde_json = "1.0.145"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.75"

[lints]
workspace = true
